[tool.poetry]
name = "vanna"
version = "0.1.0"
description = "Simple feature flagging client"

license = "MIT"

authors = [
    "Yanglin Zhao <hi@yanglinzhao.com>"
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6 || ^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
hypothesis = "^4.23"
